# Marlin

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cobertura.xml  marlin_demo.md  roadmap.md  run_all_tests.sh  rust-toolchain.toml  tarpaulin-report.html
.github/workflows/: ci.yml  nightly-backup-prune.yml
bench/: dirty-vs-full.md  dirty-vs-full.sh  gen-corpus.sh
cli-bin/: Cargo.toml  build.rs
cli-bin/docs/: cli_cheatsheet.md
cli-bin/src/: cli.rs  main.rs
cli-bin/src/cli/: annotate.rs  backup.rs  coll.rs  commands.yaml  event.rs  link.rs  remind.rs  state.rs  task.rs  version.rs  view.rs  watch.rs
cli-bin/tests/: cli_coll_unit.rs  cli_link_unit.rs  cli_view_unit.rs  e2e.rs  neg.rs  pos.rs  test.md  util.rs  watch_unit.rs
cli-bin/tests/integration/watcher/: watcher_test.rs
docs/: marlin_demo.md  roadmap.md  vision.md  windows_setup.md
docs/adr/: DP-001_schema_v1.1.md  DP-002_dirty-flag.md  DP-003_file-watcher_lifecycle.md  DP-004_content-blob_strategy.md  DP-005_hash_and_dedupe.md  DP-006_embeddings_and_models.md  DP-007_search_dsl_v2.md  DP-008_workflow_tables.md  DP-009_tui_keymap.md  DP-010_kde_sidebar.md  DP-011_sync_backend.md
docs/spec-details/: Rename+Move-Handling.md
libmarlin/: Cargo.toml
libmarlin/src/: backup.rs  config.rs  config_tests.rs  db_tests.rs  error.rs  facade_tests.rs  lib.rs  logging.rs  logging_tests.rs  scan.rs  scan_tests.rs  test_utils.rs  utils.rs  utils_tests.rs  watcher.rs  watcher_tests.rs
libmarlin/src/db/: database.rs  mod.rs
libmarlin/src/db/migrations/: 0001_initial_schema.sql  0002_update_fts_and_triggers.sql  0004_fix_hierarchical_tags_fts.sql  0005_add_dirty_table.sql  0006_drop_tags_canonical_id.sql  0007_fix_rename_trigger.sql
spec-details/: TUI+Query-DSL+Templates.md
src/: cli.rs  config.rs  logging.rs  main.rs  scan.rs  test_hierarchical_tags.rs  tutorial.md
src/cli/: annotate.rs  coll.rs  event.rs  link.rs  remind.rs  state.rs  task.rs  version.rs  view.rs
src/db/: migrations.sql  mod.rs
src/db/migrations/: 0002_update_fts_and_triggers.sql  0003_create_links_collections_views.sql  mod.rs
tests/: e2e.rs  neg.rs  pos.rs  test.md  util.rs
tui-bin/: Cargo.toml
tui-bin/src/: main.rs
