[package]
name = "marlin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow            = "1"
clap              = { version = "4", features = ["derive"] }
directories       = "5"
glob              = "0.3"
rusqlite          = { version = "0.31", features = ["bundled", "backup"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir           = "2.5"
shlex             = "1.3"
chrono            = "0.4"

