[package]
name = "marlin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow            = "1"
clap              = { version = "4", features = ["derive"] }
directories       = "5"
glob              = "0.3"
rusqlite          = { version = "0.31", features = ["bundled", "backup"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir           = "2.5"
shlex             = "1.3"
chrono            = "0.4"
shellexpand       = "3.1"
clap_complete     = "4.1"
serde_json = { version = "1", optional = true }   # <-- NEW

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
dirs       = "5"        # cross-platform data dir helper

[features]
# The CLI prints JSON only when this feature is enabled.
# Having the feature listed silences the `unexpected cfg` lint even
# when you don’t turn it on.
json = ["serde_json"]