[package]
name    = "marlin-cli"
version = "0.1.0"
edition = "2021"
publish = false           # binary crate, not meant for crates.io

[[bin]]
name = "marlin"           # cargo install/run -> `marlin`
path = "src/main.rs"

[dependencies]
libmarlin          = { path = "../libmarlin" }   # â† core library
anyhow             = "1"
clap               = { version = "4", features = ["derive"] }
clap_complete      = "4.1"
ctrlc              = "3.4"
glob               = "0.3"
rusqlite           = { version = "0.31", features = ["bundled", "backup"] }
shellexpand        = "3.1"
shlex              = "1.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir            = "2.5"
serde_json         = { version = "1", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates  = "3"
tempfile    = "3"
dirs        = "5"

[features]
# Enable JSON output with `--features json`
json = ["serde_json"]

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
