[package]
name = "libmarlin"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow             = "1"
chrono             = "0.4"
directories        = "5"
glob               = "0.3"
rusqlite           = { version = "0.31", features = ["bundled", "backup"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir            = "2.5"
shlex              = "1.3"
shellexpand        = "3.1"
serde_json         = { version = "1", optional = true }

[features]
json = ["serde_json"]

[dev-dependencies]
# for temporary directories in config_tests.rs and scan_tests.rs
tempfile = "3"

# you already have rusqlite in [dependencies], so scan_tests.rs
# can just use rusqlite::Connection, no need to repeat it here.
