[package]
name = "marlin-tui"
version = "0.1.0"
edition = "2021"

# Build a binary called `marlin-tui` from src/main.rs
[[bin]]
name = "marlin-tui"
path = "src/main.rs"

[dependencies]
anyhow              = "1"
clap                = { version = "4", features = ["derive"] }
directories         = "5"
glob                = "0.3"
rusqlite            = { version = "0.31", features = ["bundled", "backup"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir             = "2.5"
shlex               = "1.3"
chrono              = "0.4"
shellexpand         = "3.1"
clap_complete       = "4.1"
serde_json          = { version = "1", optional = true }

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
dirs        = "5"

[features]
# Enable JSON output when requested.
json = ["serde_json"]
